[gd_scene load_steps=4 format=2]

[ext_resource path="res://img/jugador.png" type="Texture" id=1]
[ext_resource path="res://Jugador.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 54.6109

[node name="Jugador" type="Area2D"]
position = Vector2( 371.434, 178.005 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
rotation = 0.406662
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="TimerDash" type="Timer" parent="."]
wait_time = 0.4
one_shot = true
[connection signal="area_entered" from="." to="." method="_on_Jugador_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Jugador_body_entered"]
[connection signal="timeout" from="TimerDash" to="." method="_on_TimerDash_timeout"]
